--- a/index.html
+++ b/index.html
@@ -2858,7 +2858,7 @@
         </svg>
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         width="100%" viewBox="700 -100 2048 2048" enable-background="new 0 0 1024 1024" xml:space="preserve">
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M1025.000000,117.531342 
             C1023.143066,119.339439 1022.315125,121.438683 1021.497742,123.378006 
@@ -2898,7 +2898,7 @@
             C1022.941467,85.154457 1023.654358,84.717133 1024.693115,84.160370 
             C1025.000000,95.020897 1025.000000,106.041786 1025.000000,117.531342 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M135.571533,1.000000 
             C141.326172,11.548808 146.649155,22.099232 151.981552,32.644890 
@@ -2917,7 +2917,7 @@
             C109.088158,53.943230 119.599319,27.492786 130.000000,0.999999 
             C131.714355,1.000000 133.428711,1.000000 135.571533,1.000000 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M703.226562,197.933746 
             C726.813660,196.853378 749.929260,195.888702 773.031555,194.672318 
@@ -2936,7 +2936,7 @@
             C624.982056,202.145691 654.391663,200.519104 683.802551,198.923615 
             C690.117554,198.581055 696.473755,199.046127 703.226562,197.933746 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M882.414307,125.443665 
             C883.138977,122.663231 885.636292,120.610107 884.184692,117.664558 
@@ -2960,7 +2960,7 @@
             C873.496582,147.545914 873.061035,147.134201 872.625427,146.722488 
             C875.836975,139.745377 879.048523,132.768265 882.414307,125.443665 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M340.267456,333.809509 
             C302.056580,311.418030 264.160034,289.214752 226.362320,267.069397 
@@ -2976,7 +2976,7 @@
             C351.166473,340.179657 351.292419,340.307037 344.919006,336.476410 
             C343.492126,335.618774 342.028473,334.822357 340.267456,333.809509 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M252.240723,199.698212 
             C266.995483,208.053757 281.425934,216.239136 296.239319,224.641739 
@@ -2989,7 +2989,7 @@
             C154.729568,146.325119 156.870682,146.031418 160.053497,147.833450 
             C190.629211,165.144928 221.284180,182.316452 252.240723,199.698212 
             z"/>
-        <path fill="#292929" opacity="1.000000" stroke="none" 
+        <path fill="#082B61" opacity="1.000000" stroke="none" 
             d="
             M824.251099,167.239502 
             C840.761353,154.356339 856.993225,141.697311 873.225159,129.038300 
